Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObjNumObjField.quorum
class Main
    Number v
    action Main
        v:SetValue(5.0)
        Test(v)
    end

    action Test(Text var)
    end
end
